--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/community": "1.0.5",
+    "@langchain/core": "1.1.0",
+    "@langchain/deepseek": "1.0.2",
+    "@langchain/openai": "1.1.3",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -32,11 +36,13 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "jsonwebtoken": "^9.0.3",
+    "langchain": "1.1.1",
     "mongoose": "^9.1.5",
     "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
